# quickfix

./: .gitignore  CMakeLists.txt  README.md  cmake_config.h.in
UnitTest++/: CMakeLists.txt
cmake/: FindMySQL.cmake  FindSharedPtr.cmake  FindUniquePtr.cmake  QuickfixPlatformSettings.cmake  QuickfixPrebuildSetup.cmake
examples/executor/C++/: CMakeLists.txt
examples/ordermatch/: CMakeLists.txt
examples/ordermatch/test/: CMakeLists.txt
examples/tradeclient/: CMakeLists.txt
src/: CMakeLists.txt  quickfix.i
src/C++/: CMakeLists.txt  MySQLConnection.h  SSLSocketAcceptor.cpp  SSLSocketAcceptor.h  SSLSocketConnection.cpp  SSLSocketConnection.h  SSLSocketInitiator.cpp  SSLSocketInitiator.h  ThreadedSSLSocketAcceptor.cpp  ThreadedSSLSocketAcceptor.h  ThreadedSSLSocketConnection.cpp  ThreadedSSLSocketConnection.h  ThreadedSSLSocketInitiator.cpp  ThreadedSSLSocketInitiator.h  UtilitySSL.cpp  UtilitySSL.h  config.h
src/python/: CMakeLists.txt  quickfix.py  swig.sh
src/python2/: CMakeLists.txt
src/python3/: CMakeLists.txt
test/: CMakeLists.txt
test/atrun/: CMakeLists.txt
